profile section companies and jobs added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,12 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #32429a;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
